# kodereviewer

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile.in  kode-reviewer.desktop  org.kde.kode-reviewer.metainfo.xml
.github/actions/: build.yml
.github/workflows/: build.yml
Modules/: FindLibQGit2.cmake
src/: CMakeLists.txt  apidata.cpp  apidata.h  commentsmodel.cpp  commentsmodel.h  diffmodel.cpp  diffmodel.h  filemodel.cpp  filemodel.h  git-test.cpp  gitbackend.cpp  gitbackend.h  linemodel.cpp  main.cpp  networkmanager.cpp  networkmanager.h  projectmodel.cpp  projectmodel.h  pullrequestmodel.cpp  pullrequestmodel.h  resources.qrc  reviewthreadmodel.cpp  reviewthreadmodel.h
src/libgit/: CMakeLists.txt  blob.cpp  blob.h  commit.cpp  commit.h  diff.cpp  diff.h  gitobject.cpp  gitobject.h  patch.cpp  patch.h  repository.cpp  repository.h  tree.cpp  tree.h  utils.cpp  utils.h
src/qml/: AddRepositoryPage.qml  CommentSideBar.qml  CommentWindow.qml  Main.qml  ProjectDrawer.qml  PullRequestOverviewPage.qml  ReviewFilePage.qml  SettingsPage.qml  WelcomePage.qml
src/qml/components/: CommentControl.qml  CommentDelegate.qml  DrawerHeader.qml  Editor.qml  FileDelegate.qml  FileList.qml  PullRequestOverview.qml  RoundedImage.qml  SourceCodeText.qml
